style: section 命名調整

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
     </header>
-    <section class="news">
+    <section class="section section-news">
       <div class="container">
         <div class="side">
           <div class="news-title">
@@ -89,7 +89,7 @@
         </ul>
       </div>
     </section>
-    <section class="topics">
+    <section class="section section-topics">
       <div class="container">
         <div class="topic-list">
           <div class="topic-item"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/top/banner/top_bnr_sq_newproducts2024_full.jpg" alt=""></a></div>
@@ -101,7 +101,7 @@
         </div>
       </div>
     </section>
-    <section class="more-topics">
+    <section class="section section-more-topics">
       <div class="button-wrap">
         <div class="button-forward">
           <img src="https://www.snowpeak.co.jp/assets/images/common/icon_next.svg" alt="">
@@ -119,7 +119,7 @@
         </div>
       </div>
     </section>
-    <section class="reserve">
+    <section class="section section-reserve">
       <div class="container">
         <span>スノーピークが提供するすべての体験がここに</span>
         <h3>ご予約・お申し込みポータル</h3>
@@ -154,7 +154,7 @@
         <a href="#">詳しく見る</a>
       </div>
     </section>
-    <section class="experience">
+    <section class="section section-experience">
       <article class="container">
         <div class="experience-title">
           <h3>Snow Peak Experience</h3>
@@ -215,7 +215,7 @@
         </div>
       </div>
     </section>
-    <section class="relation">
+    <section class="section section-relation">
       <div class="container">
         <div class="relation-type">
           <div class="relation-title">
@@ -247,7 +247,7 @@
         </div>
       </div>
     </section>
-    <section class="about">
+    <section class="section section-about">
       <div class="about-list">
         <div class="about-item">
           <a href="#">
