style: 使用 main title content 分類

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </header>
     <section class="section section-news">
       <div class="container">
-        <div class="side">
+        <div class="main-title">
           <div class="news-title">
             <h3>NEWS</h3>
             <small>新着情報</small>
@@ -65,7 +65,7 @@
           <a href="#" class="news-more">一覧で見る</a>
           <a href="#" class="news-notice">製品に関する重要なお知らせ</a>
         </div>
-        <ul>
+        <ul class="main-content">
           <li>
             <date>2024.06.21</date>
             <a href="#" class="category">イベント</a>
@@ -91,7 +91,8 @@
     </section>
     <section class="section section-topics">
       <div class="container">
-        <div class="topic-list">
+        <h3 class="main-title">topics</h3>
+        <div class="main-content topic-list">
           <div class="topic-item"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/top/banner/top_bnr_sq_newproducts2024_full.jpg" alt=""></a></div>
           <div class="topic-item"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/top/banner/top_bnr_sq_apparel24ss_03.jpg" alt=""></a></div>
           <div class="topic-item"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/top/banner/top_bnr_sq_takibilightripstop_24ss.jpg" alt=""></a></div>
@@ -102,7 +103,8 @@
       </div>
     </section>
     <section class="section section-more-topics">
-      <div class="button-wrap">
+      <h3 class="main-title">more topics</h3>
+      <div class="main-content button-wrap">
         <div class="button-forward">
           <img src="https://www.snowpeak.co.jp/assets/images/common/icon_next.svg" alt="">
         </div>
@@ -121,128 +123,137 @@
     </section>
     <section class="section section-reserve">
       <div class="container">
-        <span>スノーピークが提供するすべての体験がここに</span>
-        <h3>ご予約・お申し込みポータル</h3>
-        <div class="reserve-list">
-          <div class="reserve-item">
-            <img src="https://www.snowpeak.co.jp/assets/images/common/icon_exp_camp.svg" alt="">
-            <h4>CAMP</h4>
-            <small>キャンプ</small>
-          </div>
-          <div class="reserve-item">
-            <img src="https://www.snowpeak.co.jp/assets/images/common/icon_exp_event.svg" alt="">
-            <h4>EVENT</h4>
-            <small>イベント</small>
-          </div>
-          <div class="reserve-item">
-            <img src="https://www.snowpeak.co.jp/assets/images/common/icon_exp_tourism.svg" alt="">
-            <h4>TOURISM</h4>
-            <small>ツーリズム</small>
-          </div>
-          <div class="reserve-item">
-            
-            <img src="https://www.snowpeak.co.jp/assets/images/common/icon_exp_food.svg" alt="">
-            <h4>FOOD</h4>
-            <small>フード</small>
-          </div>
-          <div class="reserve-item">
-            <img src="https://www.snowpeak.co.jp/assets/images/common/icon_exp_glamping.svg" alt="">
-            <h4>GLAMPING</h4>
-            <small>グランピング</small>
-          </div>
+        <div class="main-title">
+          <span>スノーピークが提供するすべての体験がここに</span>
+          <h3>ご予約・お申し込みポータル</h3>
         </div>
-        <a href="#">詳しく見る</a>
+        <div class="main-content">
+          <div class="reserve-list">
+            <div class="reserve-item">
+              <img src="https://www.snowpeak.co.jp/assets/images/common/icon_exp_camp.svg" alt="">
+              <h4>CAMP</h4>
+              <small>キャンプ</small>
+            </div>
+            <div class="reserve-item">
+              <img src="https://www.snowpeak.co.jp/assets/images/common/icon_exp_event.svg" alt="">
+              <h4>EVENT</h4>
+              <small>イベント</small>
+            </div>
+            <div class="reserve-item">
+              <img src="https://www.snowpeak.co.jp/assets/images/common/icon_exp_tourism.svg" alt="">
+              <h4>TOURISM</h4>
+              <small>ツーリズム</small>
+            </div>
+            <div class="reserve-item">
+              
+              <img src="https://www.snowpeak.co.jp/assets/images/common/icon_exp_food.svg" alt="">
+              <h4>FOOD</h4>
+              <small>フード</small>
+            </div>
+            <div class="reserve-item">
+              <img src="https://www.snowpeak.co.jp/assets/images/common/icon_exp_glamping.svg" alt="">
+              <h4>GLAMPING</h4>
+              <small>グランピング</small>
+            </div>
+          </div>
+          <a href="#">詳しく見る</a>
+        </div>
       </div>
     </section>
     <section class="section section-experience">
-      <article class="container">
-        <div class="experience-title">
-          <h3>Snow Peak Experience</h3>
-          <small>スノーピークの取り組み</small>
-        </div>
-        <div class="slogan">私たちはキャンプの力を<br>信じています。</div>
-        <p>眩くあたたかい朝陽の光で目覚め、満天の星空の下で眠りにつく。<br>私たちキャンパーは、そんな当たり前で豊かな、<br>自然の中で過ごすことの正しい価値を知っています。</p>
-        <p>日本中で、世界中で、そんな自然のありがたさに気づく人を<br>増やし、つなげていきたい。それがスノーピークの願いです。</p>
-        <p>「衣食住働遊」</p>
-        <p>人が人らしく生きるすべての時間に、<br>キャンプの力が豊かさを与えてくれることを信じて。</p>
-      </article>
-      <div class="button-wrap">
-        <div class="button-forward">
-          <img src="https://www.snowpeak.co.jp/assets/images/common/icon_next.svg" alt="">
-        </div>
-        <div class="container">
-          <div class="experience-list">
-            <div class="experience-item">
-              <a href="#">
-                <div class="pic-blend">
-                  <img src="https://www.snowpeak.co.jp/assets/images/experience/th_camp.jpg" alt="">
-                </div>
-                <div class="txt">
-                  <h4>遊<small>CAMP</small></h4>
-                  <p>自然の中で<br>五感から豊かさを<br>感じる体験を</p>
-                  <span class="more">詳しく知る</span>
-                </div>
-              </a>
-            </div>
-            <div class="experience-item">
-              <a href="#">
-                <div class="pic-blend">
-                  <img src="https://www.snowpeak.co.jp/assets/images/experience/th_wear.jpg" alt="">
-                </div>
-                <div class="txt">
-                  <h4>衣 <small>WEAR</small></h4>
-                  <p>着ることで<br>その土地の物語になる<br>服づくり</p>
-                  <span class="more">詳しく知る</span>
-                </div>
-              </a>
-            </div>
-            <div class="experience-item">
-              <a href="#">
-                <div class="pic-blend">
-                  <img src="https://www.snowpeak.co.jp/assets/images/experience/th_food.jpg" alt="">
-                </div>
-                <div class="txt">
-                  <h4>食<small>FOOD</small></h4>
-                  <p>野生の感覚が<br>おいしいと感じる<br>食体験</p>
-                  <span class="more">詳しく知る</span>
-                </div>
-              </a>
+      <div class="main-title container">
+        <h3>Snow Peak Experience</h3>
+        <small>スノーピークの取り組み</small>
+      </div>
+      <div class="main-content">
+        <article class="container">
+          <h4 class="slogan">私たちはキャンプの力を<br>信じています。</h4>
+          <p>眩くあたたかい朝陽の光で目覚め、満天の星空の下で眠りにつく。<br>私たちキャンパーは、そんな当たり前で豊かな、<br>自然の中で過ごすことの正しい価値を知っています。</p>
+          <p>日本中で、世界中で、そんな自然のありがたさに気づく人を<br>増やし、つなげていきたい。それがスノーピークの願いです。</p>
+          <p>「衣食住働遊」</p>
+          <p>人が人らしく生きるすべての時間に、<br>キャンプの力が豊かさを与えてくれることを信じて。</p>
+        </article>
+        <div class="button-wrap">
+          <div class="button-forward">
+            <img src="https://www.snowpeak.co.jp/assets/images/common/icon_next.svg" alt="">
+          </div>
+          <div class="container">
+            <div class="experience-list">
+              <div class="experience-item">
+                <a href="#">
+                  <div class="pic-blend">
+                    <img src="https://www.snowpeak.co.jp/assets/images/experience/th_camp.jpg" alt="">
+                  </div>
+                  <div class="txt">
+                    <h4>遊<small>CAMP</small></h4>
+                    <p>自然の中で<br>五感から豊かさを<br>感じる体験を</p>
+                    <span class="more">詳しく知る</span>
+                  </div>
+                </a>
+              </div>
+              <div class="experience-item">
+                <a href="#">
+                  <div class="pic-blend">
+                    <img src="https://www.snowpeak.co.jp/assets/images/experience/th_wear.jpg" alt="">
+                  </div>
+                  <div class="txt">
+                    <h4>衣 <small>WEAR</small></h4>
+                    <p>着ることで<br>その土地の物語になる<br>服づくり</p>
+                    <span class="more">詳しく知る</span>
+                  </div>
+                </a>
+              </div>
+              <div class="experience-item">
+                <a href="#">
+                  <div class="pic-blend">
+                    <img src="https://www.snowpeak.co.jp/assets/images/experience/th_food.jpg" alt="">
+                  </div>
+                  <div class="txt">
+                    <h4>食<small>FOOD</small></h4>
+                    <p>野生の感覚が<br>おいしいと感じる<br>食体験</p>
+                    <span class="more">詳しく知る</span>
+                  </div>
+                </a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="button-backward">
-          <img src="https://www.snowpeak.co.jp/assets/images/common/icon_next.svg" alt="">
+          <div class="button-backward">
+            <img src="https://www.snowpeak.co.jp/assets/images/common/icon_next.svg" alt="">
+          </div>
         </div>
       </div>
     </section>
     <section class="section section-relation">
       <div class="container">
-        <div class="relation-type">
-          <div class="relation-title">
-            <h3>PARTNERSHIP</h3>
-            <small>パートナーシップ</small>
+        <h3 class="main-title">relation</h3>
+        <div class="main-content">
+          <div class="relation-type">
+            <div class="relation-title">
+              <h4>PARTNERSHIP</h4>
+              <small>パートナーシップ</small>
+            </div>
+            <div class="relation-list">
+              <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/plink_npojop.png" alt=""></a></div>
+              <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/plink_asacafe.png" alt=""></a></div>
+              <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/plink_zozotown.png" alt=""></a></div>
+              <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/plink_yamap.png" alt=""></a></div>
+              <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/plink_caj.jpg" alt=""></a></div>
+              <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/plink_forestock.png" alt=""></a></div>
+              <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/plink_trantixxii.png" alt=""></a></div>
+              <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/plink_spbs.png" alt=""></a></div>
+            </div>
           </div>
-          <div class="relation-list">
-            <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/plink_npojop.png" alt=""></a></div>
-            <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/plink_asacafe.png" alt=""></a></div>
-            <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/plink_zozotown.png" alt=""></a></div>
-            <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/plink_yamap.png" alt=""></a></div>
-            <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/plink_caj.jpg" alt=""></a></div>
-            <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/plink_forestock.png" alt=""></a></div>
-            <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/plink_trantixxii.png" alt=""></a></div>
-            <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/plink_spbs.png" alt=""></a></div>
-          </div>
-        </div>
-        <div class="relation-type">
-          <div class="relation-title">
-            <h3>FRANCHISE</h3>
-            <small>フランチャイズ</small>
-          </div>
-          <div class="relation-list">
-            <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/flink_spgi.png" alt=""></a></div>
-            <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/flink_spgt.png" alt=""></a></div>
-            <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/flink_spysa.svg" alt=""></a></div>
-            <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/flink_fsh.png" alt=""></a></div>
+          <div class="relation-type">
+            <div class="relation-title">
+              <h4>FRANCHISE</h4>
+              <small>フランチャイズ</small>
+            </div>
+            <div class="relation-list">
+              <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/flink_spgi.png" alt=""></a></div>
+              <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/flink_spgt.png" alt=""></a></div>
+              <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/flink_spysa.svg" alt=""></a></div>
+              <div class="relation-company"><a href="#"><img src="https://www.snowpeak.co.jp/assets/images/footer/flink_fsh.png" alt=""></a></div>
+            </div>
           </div>
         </div>
       </div>
