style: container 寬度一致

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
           </a>
         </div>
       </div>
-      <div class="smaller-container">
+      <div class="container">
         <div class="about-contact">
           <div class="contact-title">
             <h3>CONTACT</h3>
@@ -313,7 +313,7 @@
       </div>
     </section>
     <footer>
-      <div class="smaller-container">
+      <div class="container">
         <ul class="footer-service">
           <li><a href="#">オンラインストア</a></li>
           <li><a href="#">店舗・キャンプ場・施設</a></li>
