fix: 拆分成更彈性的section

--- a/index.html
+++ b/index.html
@@ -288,6 +288,8 @@
           </a>
         </div>
       </div>
+    </section>
+    <section class="section section-contact">
       <div class="container">
         <div class="about-contact">
           <div class="contact-title">
