style: 增加header的優先權

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
-    <header>
+    <header class="page-header">
       <div class="bar">
         <div class="menu"><img src="./assets/photos/icon-menu.svg" alt="">MENU</div>
         <h1 class="logo"><a href="#"><img src="./assets/photos/logo.svg" alt=""></a></h1>
