fix: add h1 text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <header class="page-header">
       <div class="bar">
         <div class="menu"><img src="./assets/photos/icon-menu.svg" alt="">MENU</div>
-        <h1 class="logo"><a href="#"><img src="./assets/photos/logo.svg" alt=""></a></h1>
+        <div class="logo">
+          <h1>snow peak</h1>
+          <a href="#"><img src="./assets/photos/logo.svg" alt=""></a>
+        </div>
         <div class="apply"><a href="#"><img src="./assets/photos/icon-circle-arrow.svg" alt="">宿泊予約・イベント申込</a></div>
         <div class="shop"><a href="#"><img src="./assets/photos/header_btn_ec_w.svg" alt="">STORE</a></div>
       </div>
