fix: 使用 info 區分 contact global

--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
         </div>
       </div>
     </section>
-    <section class="section section-contact">
+    <section class="section section-info">
       <div class="container">
-        <div class="about-contact">
+        <div class="info-contact">
           <div class="contact-title">
             <h3>CONTACT</h3>
             <small>お問い合わせ</small>
@@ -309,7 +309,7 @@
           <p>土日祝日のお問い合わせ、<br>商品発送はお休みさせていただいております。</p>
           <a href="#">よくあるご質問</a>
         </div>
-        <div class="about-global">
+        <div class="info-global">
           <a href="#" class="global-title">
             <h3>GLOBAL</h3>
             <small>グローバルサイト</small>
